# symbolic-time-series

./: README.md  main.py  method.html  method.md  pyproject.toml  requirements.txt
.github/workflows/: build-package.yaml  ci.yaml  lint-code.yaml  test-code.yaml
examples/: regression.ipynb  regression.py
src/: main.py  optimiser.py
src/edts/: __init__.py  core.py  main.py  optimiser.py
tests/: test_gradient_decent_optimiser.py  test_main.py
