[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edts"
version = "0.1.0"
description = "Equation Discovery for Time Series"
authors = [{name = "Guus Toussaint", email = "g.toussaint@liacs.leideuniv.nl"}]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"